# neural-network-homework

./: .gitignore  Answer.py  MLP.py  OPTIMIZER.py  pyproject.toml  requirements.txt
homework1/: Answer.py  MLP.py  OPTIMIZER.py  PLA.py  utils.py
homework2/: .gitignore  Answer.py  Answer_bak.py  HW2.docx  baseline_cifar_imbalanced_run.sh  baseline_cifar_noisy.run.sh  baseline_cifar_semi.run.sh  baseline_mnist_imbalanced_run.sh  baseline_mnist_noisy_run.sh  baseline_mnist_semi_run.sh  cifar_imbalanced_run.sh  cifar_noisy_run.sh  cifar_semi_run.sh  cifar_test_y.npy  common.sh  loss.py  mnist_imbalanced_run.sh  mnist_noisy_run.sh  mnist_semi_run.sh  mnist_test_y.npy  process.py  run.sh  valid_cifar_noisy_run.sh  valid_mnist_noisy_run.sh
homework2/models/: mentornet.py  resnet.py
homework2/notebooks/: Untitled.ipynb
output/cifar/1_imbalanced/: test_pred.npy
output/cifar/2_semisupervised/: test_pred.npy
output/cifar/3_noisy/: test_pred.npy
output/mnist/1_imbalanced/: test_pred.npy
output/mnist/2_semisupervised/: test_pred.npy
output/mnist/3_noisy/: test_pred.npy
